<resources>
    <string name="app_name">EarthGardener</string>

    <string name="menu_home">홈</string>
    <string name="menu_post">글 목록</string>
    <string name="menu_my">MY</string>

    <!-- Login -->
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="email_hint">이메일을 입력해주세요</string>
    <string name="pw">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="sign_up">회원가입</string>
    <string name="find_pw">비밀번호 찾기</string>

    <!-- SignUp -->
    <string name="next">다음</string>
    <string name="finish">완료</string>
    <string name="email_id">이메일 주소(아이디)</string>
    <string name="get_code">인증번호 전송</string>
    <string name="post_code_to_email">인증번호가 메일로 전송되었습니다</string>
    <string name="input_code">인증번호 입력</string>
    <string name="confirm_code">인증번호 확인</string>
    <string name="nickname">닉네임</string>


    <!--MyPage-->
    <string name="my_page">마이페이지</string>
    <string name="my_modify_profile">프로필 변경</string>
    <string name="my_modify_pw">비밀번호 변경</string>
    <string name="my_push_alarm">푸시 알림</string>
    <string name="my_dark_mode">다크모드</string>
    <string name="my_require">문의하기</string>
    <string name="my_help">도움말</string>
    <string name="my_logout">로그아웃</string>
    <string name="my_unregister">회원탈퇴</string>


    <string name="month">1월</string>
    <string name="title">오늘의 기록 제목</string>
    <string name="point">250</string>
    <string name="exp">exp</string>
    <string name="first_todo">first todo</string>
    <string name="second_todo">second todo</string>
    <string name="third_todo">third todo</string>
    <string name="title_hint_msg">오늘의 일기 제목</string>
    <string name="title_hint">제목을 입력해주세요</string>
    <string name="checklist_msg">내가 지구를 지킨 일</string>
    <string name="fist_check_list">fist_check_list</string>
    <string name="point300">300</string>
    <string name="second_check_list">second_check_list</string>
    <string name="point250">250</string>
    <string name="third_check_list">third_check_list</string>
    <string name="point200">200</string>
    <string name="forth_check_list">forth_check_list</string>
    <string name="point150">150</string>
    <string name="fifth_check_list">fifth_check_list</string>
    <string name="point100">100</string>
    <string name="photo_msg">사진 인증</string>
    <string name="save">저장하기</string>

    <!-- Home -->
    <string name="home_subtitle">지구를 지켜보아요</string>
    <string name="home_tree_title">지금 자라고있는 나무</string>
    <string name="home_footprints_title">지구를 지키기위한 발자취</string>
    <string name="home_monthly">이번 달에 심은 나무</string>
    <string name="home_total">전체 나무 개수</string>
    <string name="dialog_title">다음으로 키울 식물의\n이름을 정해주세요.</string>
    <string name="dialog_subtitle">나무를 완성할때 마다 정할 수 있어요.</string>
    <string name="dialog_hint_tree_name">나무 이름을 작성하세요</string>

    <!-- Modify Profile & PW -->
    <string name="nickname_hint">닉네임을 입력해주세요</string>
    <string name="origianl_pw">기존 비밀번호</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="confirm_new_pw">비밀번호 확인</string>
    <string name="original_pw_hint">기존 비밀번호를 입력해주세요</string>
    <string name="new_pw_hint">새 비밀번호를 입력해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>