<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.user.signup.emailpw.EmailPwFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sign_up_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="@color/text_black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/suit_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_email"
                android:layout_marginTop="10dp"
                android:hint="@string/email_hint"/>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="@color/primary_green"
                android:textSize="15sp"
                android:fontFamily="@font/suit_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_code_to_email"
                app:layout_constraintTop_toBottomOf="@+id/et_sign_up_email"
                android:textColor="@color/any_dark_gray"
                android:visibility="invisible"
                android:layout_marginTop="5dp"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/et_email_code"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/border_color_any_light_gray_1dp"
                android:textSize="15sp"
                android:hint="@string/input_code"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_code"
                app:layout_goneMarginLeft="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                />

            <TextView
                android:id="@+id/tv_check_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_code"
                android:textColor="@color/primary_green"
                android:textSize="15sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_email_code"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/tv_signup_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/et_email_code"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/et_signup_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw_hint"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
