<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.user.kakaologin.SignupEmailActivity">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:textSize="25sp"
            android:fontFamily="@font/suit_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_sign_up_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />

        <EditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_email"
            android:layout_marginTop="10dp"
            android:hint="@string/email_hint"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_code"
            android:textColor="@color/primary_green"
            android:textSize="15sp"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sign_up_email"/>

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_code_to_email"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_email"
            android:textColor="@color/any_dark_gray"
            android:visibility="invisible"
            android:layout_marginTop="5dp"
            android:textSize="15sp"/>


        <LinearLayout
            android:id="@+id/linear_email_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_code"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:weightSum="3">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3">
                <EditText
                    android:id="@+id/et_email_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/rectangle_light_gray_width_1"
                    android:textSize="15sp"
                    android:hint="@string/input_code"
                    android:fontFamily="@font/suit_medium"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    />
                <TextView
                    android:id="@+id/tv_email_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="15sp"
                    android:fontFamily="@font/suit_medium"
                    android:textColor="@color/primary_green"
                    app:layout_constraintEnd_toEndOf="@+id/et_email_code"
                    app:layout_constraintTop_toTopOf="@+id/et_email_code"
                    app:layout_constraintBottom_toBottomOf="@+id/et_email_code"
                    android:layout_marginRight="10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tv_check_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_code"
                android:fontFamily="@font/suit_medium"
                android:textColor="@color/primary_green"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/background_white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/suit_medium"
            android:background="@drawable/rectangle_light_gray_radius_30"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>