<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:context=".presentation.mypage.modifyPW.ModifyPwActivity">
        <TextView
            android:id="@+id/tv_modify_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_modify_pw"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:textSize="25sp"
            android:fontFamily="@font/suit_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_modify_original_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origianl_pw"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_modify_pw"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/et_modify_original_pw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/suit_medium"
            android:hint="@string/original_pw_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/tv_modify_original_pw"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <TextView
            android:id="@+id/tv_modify_new_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pw"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_modify_original_pw"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/et_modify_new_pw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/suit_medium"
            android:hint="@string/new_pw_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/tv_modify_new_pw"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_modify_confirm_new_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_pw"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_modify_new_pw"
            android:layout_marginTop="50dp"/>
        <EditText
            android:id="@+id/et_modify_confirm_new_pw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_modify_confirm_new_pw"
            android:layout_marginTop="10dp"
            android:hint="@string/new_pw_hint"
            android:inputType="textPassword"
            android:fontFamily="@font/suit_medium"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_modify_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_modify_pw"
            android:textColor="@color/background_white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/suit_medium"
            android:background="@drawable/rectangle_light_gray_radius_30"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
