<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:context=".presentation.mypage.modifyProfile.ModifyProfileActivity">

        <TextView
            android:id="@+id/tv_modify_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_modify_profile"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:textSize="25sp"
            android:fontFamily="@font/suit_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            app:tint="@color/text_black" />

        <LinearLayout
            android:id="@+id/linear_user_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_modify_profile">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_modify_profile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/iv_modify_profile_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_gallery"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_modify_profile_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/suit_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_user_img"
            android:layout_marginTop="50dp"/>
        <EditText
            android:id="@+id/et_modify_profile_nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_modify_profile_nickname"
            android:layout_marginTop="10dp"
            android:hint="@string/nickname_hint"
            android:fontFamily="@font/suit_medium"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_modify_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_modify_profile"
            android:textColor="@color/background_white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/suit_medium"
            android:background="@drawable/rectangle_light_gray_radius_30"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
